# DataStructureLab2

./: TADs.drawio
Persona/: CMakeLists.txt
Persona/src.com.persona/bl/: Business.cpp  Business.h
Persona/src.com.persona/bl/objects/: Person.cpp  Person.h
Persona/src.com.persona/tl/: Controller.cpp  Controller.h
Persona/src.com.persona/ui/: main.cpp
Shapes/: CMakeLists.txt
Shapes/src/com/shapes/bl/: Business.cpp  Business.h
Shapes/src/com/shapes/bl/objects/: Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h
Shapes/src/com/shapes/bl/objects/shape/: Shape.cpp  Shape.h
Shapes/src/com/shapes/tl/: Controller.cpp  Controller.h
Shapes/src/com/shapes/ui/: main.cpp
